  * [auto* build] simplify autogen.sh, handle automake 1.13 test running (fixes #2490)
  * [mod_userdir] add userdir.active option, "enabled" by default
  * [core] return 501 Not Implemented in static file mode for all methods except GET/POST/HEAD/OPTIONS
  * [core] recognize more http methods to forward to backends (fixes #2346)

- 1.4.32 - 2012-11-21
  * Code cleanup with clang/sparse (fixes #2437, thx kibi)
  * Ignore EPIPE/ECONNRESET after SSL_shutdown
  * Handle ENAMETOOLONG, return 404 Not Found (fixes #2396, thx dererkazo)
  * configure.ac: remove old stuff, add some new to fix warnings in automake 1.12 (fixes #2419, thx blino)
  * add PATCH method (fixes #2424)
  * fix :port handling in $HTTP["host"] checks (fixes #2135. thx liming)
  * network_server_init: fix double free and memleak on error (fixes #2440, thx kyprizel)
  * detect "x-gzip"/"x-bzip2" as separate encodings, more strict encoding matching (fixes #2443)
  * tests: make sure mod_proxy doesn't leave running processes (fixes #2435, thx kibi)
  * mod_extforward: log address of untrusted proxy with debug.log-request-handling
  * fix DoS in Connection header value split (reported by Jesse Sipprell, CVE-2012-5533)
  * remove whitespace at end of header keys

- 1.4.31 - 2012-05-31
  * [ssl] fix segfault in counting renegotiations for openssl versions without TLSEXT/SNI (thx carpii for reporting)
  * Move fdevent subsystem includes to implementation files to reduce conflicts (fixes #2373)
  * [mod_compress] fix handling if etags are disabled but cache-dir is set - may lead to double response
  * disable mmap by default (fixes #2391)
  * buffer_caseless_compare: always convert letters to lowercase to get transitive results, fixing array lookups (fixes #2405)
  * Fix handling of empty header list entries in http_request_split_value, fixing invalid read in valgrind (fixes #2413)
  * Fix access log escaping of " and \\ (fixes #1551)